Fix product thumbnails on mobile + update search placeholder text

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -365,6 +365,15 @@ ul li ul li
     font-size: 15px
     text-align: center
 
+    &::-webkit-input-placeholder
+      color: $text-color
+
+    &:-moz-placeholder
+      color: $text-color
+
+    &:-ms-input-placeholder
+      color: $text-color
+
   button.search-button
     background: none
     padding: 2px
